# stackoverflow_clone_axum

./: Cargo.toml  README.md
migrations/: 20221203231817_setup.up.sql
src/: error.rs  main.rs  model.rs
src/handlers/: handlers_inner.rs  mod.rs
src/persistence/: database_controller.rs
src/web/: mod.rs  routes_q_and_a.rs
tests/: quick_dev.rs
