[package]
name = "stackoverflow_clone_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = {version = "0.6", features = ["macros"]}
axum-macros = "0.3.8"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
dotenvy = "0.15.7"

[dev-dependencies]

anyhow = "1"
httpc-test = "0.1.5"
